# kg-detective

./: .gitignore  pyproject.toml
.github/workflows/: testpypi.yml
kg_detective/: __init__.py  kg.py  lib.py  structure.py
kg_detective/de/: files.txt  kg_fn.py  kg_translation.py
kg_detective/de/rules/: adj_deklination.py  adj_komparativ.py  adj_ohne_steigerung.py  adj_superlativ.py  adv_komparation.py  art_bestimmer.py  art_demostrativ.py  art_possessiv.py  art_unbestimmer.py  conj_einfache.py  frag_frag.py  noun_genus.py  noun_kasus.py  noun_pluralform.py  prep_mit_akkusativ.py  (+30 more)
kg_detective/en/: kg_fn.py  kg_translation.py
kg_detective/es/: kg_fn.py  kg_translation.py
tests/: constants.py  lang_test_sample.py  lib.py  test_doc.py  test_gen_sens_json.py  test_kg_detective.py  test_modules.py  test_tbr.py
tests/test_de/: test_de.py  test_de_adj.py  test_de_adv.py  test_de_art.py  test_de_conj.py  test_de_frag.py  test_de_noun.py  test_de_prep.py  test_de_pron.py  test_de_sen.py  test_de_verb.py  test_de_zahl.py
tests/test_en/: test_en.py  test_en_adj.py  test_en_adv.py  test_en_adverbial.py  test_en_compound.py  test_en_conj.py  test_en_det.py  test_en_interj.py  test_en_nominal.py  test_en_noun.py  test_en_prep.py  test_en_pron.py  test_en_relative.py  test_en_simple.py  test_en_subjunctive.py  test_en_verb.py
tests/test_es/: test_es.py  test_es_adj.py  test_es_adv.py  test_es_art.py  test_es_conj.py  test_es_coordinale.py  test_es_interj.py  test_es_noun.py  test_es_num.py  test_es_prep.py  test_es_pron.py  test_es_subordinada.py  test_es_verb.py
(+142 files in other folders)
