[tool.poetry]
name = "kg-detective"
version = "0.1.18"
description = "Knowledge Graph recognizer component for spacy pipeline"
authors = ["Phoenix Grey <phoenix.grey0108@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
spacy = "3.7.5"

[tool.poetry.dev-dependencies]
pytest = "^8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
